<resources>
    <string name="app_name">EcoleKarate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- login fragment -->
    <string name="strTbInfoCeinture">N/A</string>
    <string name="strTbInfoGrade">N/A</string>
    <string name="strTbInfoPoints">N/A</string>
    <string name="strTbInfoCredits">N/A</string>
    <string name="app_spinner">Anonyme</string>
    <string name="strBtnConnexion">Connexion</string>

    <!-- historique fragment -->
    <string name="strTbNomHistorique">Anonyme</string>
    <string name="strTbScrollable">N/A</string>

    <!-- combat fragment-->
    <string name="strTbNomCombat">Anonyme</string>
    <string name="strTbPointsCombat">N/A</string>
    <string name="strTbCreditsCombat">N/A</string>
    <string name="tv_Alias">Alias:</string>

</resources>
