<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_combat">

    <TextView
        android:id="@+id/tbNom_combat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Crédits :"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toEndOf="@+id/imageLogin_combat_"
        app:layout_constraintTop_toBottomOf="@+id/tbNom_combat3"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/tbNom_combat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Points : "
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toEndOf="@+id/imageLogin_combat_"
        app:layout_constraintTop_toBottomOf="@+id/tbNom_combat"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/imageLogin_combat_"
        android:layout_width="256dp"
        android:layout_height="252dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/nouser_avatar"

        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/Kumite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/imageLogin_combat_1"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/nouser_avatar"

        app:layout_constraintEnd_toStartOf="@+id/imageLogin_combat_3"
        app:layout_constraintStart_toEndOf="@+id/imageLogin_combat_2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageLogin_combat_2"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/border_image_blanc"
        android:src="@drawable/nouser_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageLogin_combat_3"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/border_image_rouge"
        android:src="@drawable/nouser_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="462dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404">

        <RadioButton
            android:id="@+id/radio_spectateur"
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="Spectateur"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio_combattant"
            android:layout_width="154dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="Combattant"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio_arbitre"
            android:layout_width="154dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="Arbitre"
            android:textSize="22sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/Kumite"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Kumite"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/tbNom_combat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/strTbNomCombat"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/imageLogin_combat_"
        app:layout_constraintTop_toBottomOf="@+id/Kumite"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/strTbCreditsCombat"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/tbNom_combat3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/strTbPointsCombat"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/tbNom_combat3"
        app:layout_constraintTop_toBottomOf="@+id/tbNom_combat" />

    <ImageView
        android:id="@+id/imageCoupRouge"
        android:layout_width="181dp"
        android:layout_height="179dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogin_combat_3"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/ic_games_black_24dp" />

    <ImageView
        android:id="@+id/imageCoupBlanc"
        android:layout_width="181dp"
        android:layout_height="179dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogin_combat_2"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/ic_games_black_24dp" />

    <ImageView
        android:id="@+id/imageArbitre"
        android:layout_width="181dp"
        android:layout_height="179dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageCoupRouge"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/imageCoupBlanc"
        app:layout_constraintTop_toBottomOf="@+id/imageLogin_combat_1"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/ic_games_black_24dp" />

</android.support.constraint.ConstraintLayout>